<resources>
    <string name="app_name">StarWarsQuiz</string>
    <string name="intro_text">QUIZ: How strong is the Force with you?</string>
    <string name="user_name">Enter your name</string>
    <string name="start_quiz">Start Quiz</string>

    <string name="question_1">1. In <i>Return of the Jedi</i>, <b>Luke Skywalker\’s</b> lightsaber was green. What color was it in the first two movies?</string>
    <string name="answer_1_a0">Red</string>
    <string name="answer_1_b0">Green</string>
    <string name="answer_1_c0">Purple</string>
    <string name="answer_1_d1">Blue</string>

    <string name="question_2">2. Which of these were <b>Darth Sidious\’ Sith</b> apprentices?</string>
    <string name="answer_2_a1">Darth Vader</string>
    <string name="answer_2_b1">Darth Tyranus</string>
    <string name="answer_2_c1">Darth Maul</string>
    <string name="answer_2_d0">General Grievous</string>

    <string name="question_3">3. Whose <i>foul stench</i> did <b>Leia</b> say she recognised on the <b>Death Star</b>?</string>
    <string name="answer_3_a0">Darth Vader</string>
    <string name="answer_3_b0">The Emperor</string>
    <string name="answer_3_c0">Dianoga</string>
    <string name="answer_3_d1">Grand Moff Tarkin</string>

    <string name="question_4">4. Who adopted <b>Leia</b> at birth?</string>
    <string name="answer_4_a0">Bail Antilles and Ona Antilles</string>
    <string name="answer_4_b1">Bail Organa and Breha Organa</string>
    <string name="answer_4_c0">Owen Lars and Beru Lars</string>
    <string name="answer_4_d0">Obi-Wan Kenobi</string>

    <string name="question_5">5. In the <i>Star Wars</i> movies, who was <b>Anakin Skywalker\’s</b> father?</string>
    <string name="answer_5_a0">Senator Palpatine</string>
    <string name="answer_5_b0">Cade Skywalker</string>
    <string name="answer_5_c0">Owen Lars</string>
    <string name="answer_5_d1">He didn\’t have one</string>

    <string name="question_6">6. What happened to <b>Luke Skywalker\’s</b> right hand after <b>Darth Vader</b> cut it off with a lightsaber?</string>
    <string name="answer_6_a1">It presumably fell into Bespin\’s orbit and was never seen again</string>
    <string name="answer_6_b0">Luke abandoned it in the carbon-freezing chamber while fighting Vader</string>
    <string name="answer_6_c0">Luke\’s friends aboard the Millennium Falcon were able to catch it</string>
    <string name="answer_6_d0">Darth Vader kept it</string>

    <string name="question_7">7. What were <b>Anakin Skywalker\’s</b> last words in <i>Return of the Jedi</i>?</string>
    <string name="answer_7_a1">You were right about me. Tell your sister… you were right.</string>
    <string name="answer_7_b0">I\’m sorry</string>
    <string name="answer_7_c0">May the force be with you</string>
    <string name="answer_7_d0">You are the last of the Jedi. The force runs strong in you. Pass on… what you have learned.</string>

    <string name="question_8">8. What fatal flaw did the rebels exploit to destroy the first <b>Death Star</b>?</string>
    <string name="answer_8_a0">An unstable nuclear reactor core</string>
    <string name="answer_8_b0">An unstable hyper matter reactor</string>
    <string name="answer_8_c0">Incomplete structural support</string>
    <string name="answer_8_d1">An exposed thermal exhaust port</string>

    <string name="question_9">9. Whose DNA was used in the creation of the <b>Clone Army</b>?</string>
    <string name="answer_9_a0">Count Dooku</string>
    <string name="answer_9_b1">Jango Fett</string>
    <string name="answer_9_c0">Anakin Skywalker</string>
    <string name="answer_9_d0">Boba Fett</string>

    <string name="question_10">10. What micro-organisms are said to be conductors of the <b>Force</b>?</string>
    <string name="answer_10_a0">Force ghosts</string>
    <string name="answer_10_b0">Chlorimidians</string>
    <string name="answer_10_c0">Mitochondria</string>
    <string name="answer_10_d1">Midichlorians</string>

    <string name="question_11">11. How old is <b>Padme Amidala</b> when she\’s elected to the position of <b>Queen of Naboo?</b></string>
    <string name="answer_11_a0">11</string>
    <string name="answer_11_b1">14</string>
    <string name="answer_11_c0">106</string>
    <string name="answer_11_d0">8</string>

    <string name="question_12">12. Who was the first Jedi to learn how to return from death as a <b>Force Ghost</b>?</string>
    <string name="answer_12_a0">Yoda</string>
    <string name="answer_12_b0">Obi-Wan Kenobi</string>
    <string name="answer_12_c0">Anakin Skywalker</string>
    <string name="answer_12_d1">Qui-Gon Jinn</string>

    <string name="score">View Score</string>
    <string name="reset">Take Quiz Again</string>
    <string name="young_padawan">Not bad, %s! You scored %d points. You are a Young Padawan. The Force is strong with you, but in order to control it and become a Jedi Knight you need more training.</string>
    <string name="jedi_knight">Great, %s! You scored %d points. You are a Jedi Knight. The Force is powerful with you. Serve well and guard the peace and justice in the Galactic Republic and maybe one day you\'ll become a Jedi Master.</string>
    <string name="jedi_master">Awesome, %s! You scored %d points. You are a Jedi Master. You\'re mastering force with grace and the Jedi High Council is proud of having you. May the Force be with You!</string>
    <string name="share">Share your result</string>
    <string name="share_result">Congratulations, %s! You scored %d points out of 12! Share your result with your friends via:</string>
    <string name="share_message">Hey, I have scored %d points in Star Wars game! Check out how strong is the force with you!</string>
</resources>
