<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- SUB-PARENT LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margins"
        android:paddingRight="@dimen/margins">

        <!-- HEADER STAR WARS LOGO -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@drawable/starwars" />

        <!-- QUIZ TITLE -->
        <TextView
            style="@style/title_main"
            android:text="@string/intro_text" />

        <!-- PLAYER NAME -->
        <EditText
            android:id="@+id/name_text_view"
            style="@style/editText_style"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <!-- START QUIZ BUTTON -->
        <Button
            android:id="@+id/start_quiz"
            style="@style/button_style"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/start_quiz" />
    </LinearLayout>
</ScrollView>
